Agregando .class al gitignore

--- a/AlgoritmoCalidad/grupo8/.gitignore
+++ b/AlgoritmoCalidad/grupo8/.gitignore
@@ -8,3 +8,9 @@
 /Fiabilidad.class
 /Mantenibilidad.class
 /VentanaPrincipal$1.class
+/Funcionabilidad$1.class
+/Funcionabilidad$2.class
+/Funcionabilidad$3.class
+/Funcionabilidad$4.class
+/Evaluacion.class
+/Resultado.class
