--- a/AlgoritmoCalidad/grupo8/.gitignore
+++ b/AlgoritmoCalidad/grupo8/.gitignore
@@ -14,3 +14,8 @@
 /Funcionabilidad$4.class
 /Evaluacion.class
 /Resultado.class
+/Eficiencia$1.class
+/Eficiencia$2.class
+/Eficiencia$3.class
+/Eficiencia$4.class
+/Eficiencia$5.class
