Completando evaluación de 3 características

--- a/AlgoritmoCalidad/grupo8/.gitignore
+++ b/AlgoritmoCalidad/grupo8/.gitignore
@@ -19,3 +19,7 @@
 /Eficiencia$3.class
 /Eficiencia$4.class
 /Eficiencia$5.class
+/Fiabilidad$1.class
+/Fiabilidad$2.class
+/Mantenibilidad$1.class
+/Mantenibilidad$2.class
