--- a/AlgoritmoCalidad/grupo8/.gitignore
+++ b/AlgoritmoCalidad/grupo8/.gitignore
@@ -23,3 +23,13 @@
 /Fiabilidad$2.class
 /Mantenibilidad$1.class
 /Mantenibilidad$2.class
+/Mantenibilidad$3.class
+/Mantenibilidad$4.class
+/Mantenibilidad$5.class
+/Usabilidad$1.class
+/Usabilidad$2.class
+/Usabilidad$3.class
+/Portabilidad$1.class
+/Portabilidad$2.class
+/Portabilidad$3.class
+/Portabilidad$4.class
